# TP_IZ_2

./: .gitignore  .travis.yml  README.md
TP_IZ2_tests/: CMakeLists.txt  tests.cpp
TP_IZ_2_multi_thread/: CMakeLists.txt
TP_IZ_2_multi_thread/inc/: library_static.h
TP_IZ_2_multi_thread/src/: helpful_functions.c  library_static.c  metrics.c  process_dirs.c
TP_IZ_2_single_thread/: CMakeLists.txt
TP_IZ_2_single_thread/inc/: library.h
TP_IZ_2_single_thread/src/: helpful_functions.c  library.c  metrics.c  process_dirs.c
test1_1/: file_1.txt
test3_multi_res/: 1.txt  2.txt
test3_single/: 1.txt  2.txt  3.txt  4.txt  5.txt  7.txt
test3_single_res/: 3.txt  4.txt  5.txt  7.txt
